--- a/babyno.top/在苹果设备上运行Stable Diffusion模型.html
+++ b/babyno.top/在苹果设备上运行Stable Diffusion模型.html
@@ -3,7 +3,7 @@
 <p>author: 路边的阿不
 title: 在苹果设备上运行Stable Diffusion模型
 slug: run-the-stable-diffusion-model-on-apple-devices
-description: ""
+description: "本文介绍了在苹果设备（MAC、iPad、iPhone）上运行Stable Diffusion模型的方法，包括模型的下载、格式转换以及如何在Swift中调用模型进行推理。"
 date: 2024-06-28 15:18:47
 draft: false
 ShowToc: true
@@ -83,7 +83,31 @@ categories:</li>
 <p>这里<code>--half</code>表示转换时精度为<code>fp16</code>，<code>--device mps</code>表示模型使用<code>mps(GPU)</code>进行推理。</p>
 <p>运行完该命令，会生成<code>Diffusers</code>格式的模型，再利用<code>Diffusers</code>格式转<code>CoreML</code>格式的步骤，将模型转换为<code>CoreML</code>格式。</p>
 <h2><code>Swift</code>调用<code>Stable Diffusion</code>模型</h2>
-<p>使用<code>Huggingface</code>提供的<a href="https://github.com/huggingface/swift-coreml-diffusers">swift-coreml-diffusers</a>库。我的<a href="https://github.com/caol64/aquarius-ai">AquariusAI</a>项目提供了示例代码。</p>
+<p>使用<code>Huggingface</code>提供的<a href="https://github.com/huggingface/swift-coreml-diffusers">swift-coreml-diffusers</a>库。</p>
+<pre><code class="lang-swift">import StableDiffusion
+import CoreML
+
+// 初始化CoreML配置
+let config = MLModelConfiguration()
+// 运行在GPU上（MAC限定）
+config.computeUnits = MLComputeUnits.cpuAndGPU
+// 初始化pipeline
+var pipeline = try StableDiffusionPipeline(resourcesAt: modelDirectory,
+                                      controlNet: [],
+                                      configuration: config,
+                                      reduceMemory: diffusersConfig.reduceMemory)
+let pipeline.loadResources()
+// 初始化图片推理配置
+var pipelineConfig = StableDiffusionPipeline.Configuration(prompt: prompt)
+pipelineConfig.stepCount = stepCount
+pipelineConfig.guidanceScale = cfgScale
+pipelineConfig.schedulerType = scheduler
+// 开始图片推理
+let images = try pipeline.generateImages(configuration: pipelineConfig,
+                                          progressHandler: { progress in
+})
+</code></pre>
+<p><strong><em>我的<a href="https://github.com/caol64/aquarius-ai">AquariusAI</a>项目提供了示例代码。</em></strong></p>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2024-06-28-run-the-stable-diffusion-model-on-apple-devices/2.webp"/></p>
 <h2>最后</h2>
 <p>那到底什么是<code>CoreML</code>呢？</p>
