--- a/f2h2h1.github.io/PHP各种运行方式的不完整总结.html
+++ b/f2h2h1.github.io/PHP各种运行方式的不完整总结.html
@@ -78,6 +78,15 @@
 <p>如果 PHP_FCGI_CHILDREN 的值为 0 ，就只有一个子进程，那么只要累计的请求数达到 PHP_FCGI_MAX_REQUESTS ， php-cgi 就会自动退出，继续有请求时 nginx 就会返回 502 。</p>
 <p>php-cgi 没有平滑重启，修改 php.ini 后要重启 php-cgi 。</p>
 <h3>apache 模块</h3>
+&lt;!--
+apache 的 模块
+mod_fcgid
+mod_fastcgi
+mod_proxy_fcgi
+mod_cgid
+mod_cgi
+--&gt;
+
 <p>apache 模块的运行方式也是十分流行的运行方式。</p>
 <p>这里需要注意的是，要根据 apache 的 mpm (Multi-Processing Module) 来选择 PHP 的版本。</p>
 <p>mpm 的比较常用模式有四种。</p>
