--- a/f2h2h1.github.io/把网页导出成PDF.html
+++ b/f2h2h1.github.io/把网页导出成PDF.html
@@ -370,3 +370,16 @@ Adobe Acrobat 似乎没有免费的版本，虽然破解版也不是不能用，
 <li><a href="https://answers.microsoft.com/en-us/msoffice/forum/all/save-as-pdf-vs-print-to-pdf-quality-issues/28c536c6-6fb2-4484-b28b-1e15ce4aac75">https://answers.microsoft.com/en-us/msoffice/forum/all/save-as-pdf-vs-print-to-pdf-quality-issues/28c536c6-6fb2-4484-b28b-1e15ce4aac75</a></li>
 </ul>
 <p>thead 标签可以在表格被分页时，每一页都保持一个表头</p>
+&lt;!--
+
+右键菜单的打印
+ctrl+p
+浏览器菜单的打印
+直接调用 print 事件
+这四种操作生成的pdf效果是一样的
+
+有哪些可以导出pdf的浏览器插件
+
+
+
+--&gt;
