--- a/informal.top/雅思备考 2024Q3.html
+++ b/informal.top/雅思备考 2024Q3.html
@@ -278,3 +278,88 @@
 <li>阅读：第一篇耗时16分钟，太久了，这次三篇的难度差异没有上次那么大，答的还可以，但每篇都不是特别好，感觉大概率要6.5了</li>
 <li>写作：好久不写了，果然手生；先写大作文，用了45分钟，还没时间review；小作文写的比较拉夸；大作文感觉还可以，应该还能维持6.0</li>
 </ul>
+<p>8.19，出分</p>
+<ul>
+<li>口语：还是万年5.5，无法相信，过几天打算申请复议了</li>
+<li>听力：7.5，题目对口，也有运气加成，简直了</li>
+<li>阅读：6.5，符合预期</li>
+<li>写作：6.0，符合预期</li>
+</ul>
+<table>
+<thead><tr>
+<th>日期</th>
+<th>听力</th>
+<th>阅读</th>
+<th>写作</th>
+<th>口语</th>
+<th>总成绩</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2024.8.16</td>
+<td>7.5</td>
+<td>6.5</td>
+<td>6.0</td>
+<td>5.5</td>
+<td>6.5</td>
+</tr>
+<tr>
+<td>2024.8.1</td>
+<td>5.5</td>
+<td>6.5</td>
+<td>6.0</td>
+<td>5.5</td>
+<td>6.0</td>
+</tr>
+<tr>
+<td>2024.7.16</td>
+<td>6.0</td>
+<td>6.5</td>
+<td>6.0</td>
+<td>5.5</td>
+<td>6.0</td>
+</tr>
+<tr>
+<td>2024.6.18</td>
+<td>5.5</td>
+<td>6.5</td>
+<td>5.5</td>
+<td>5.5</td>
+<td>6.0</td>
+</tr>
+<tr>
+<td>2024.1.21</td>
+<td>6.0</td>
+<td>6.5</td>
+<td>5.5</td>
+<td>5.0</td>
+<td>6.0</td>
+</tr>
+<tr>
+<td>2023.12.24</td>
+<td>5.5</td>
+<td>5.5</td>
+<td>5.5</td>
+<td>5.0</td>
+<td>5.5</td>
+</tr>
+</tbody>
+</table>
+<p>8.23</p>
+<ul>
+<li>申请复议</li>
+<li>为什么申请复议<ul>
+<li>这一次说的比前四次都好非常多，说的更多，停顿更少；词汇更好</li>
+<li>提前模拟四项目评分标准都是6.0</li>
+<li>这已经是我最好的状态了</li>
+</ul>
+</li>
+<li>如果复议失败，可能导致失败的原因有<ul>
+<li>p2 答案形式比较单一，一直是 I 作为主语，但感觉这个影响不那么大</li>
+<li>词汇不够高级，准备的有高级词汇，但要根据话题来看，很大概率用不上</li>
+<li>语法错误，老毛病了，很难短时间内修正</li>
+</ul>
+</li>
+<li>再提升难度比较大了，不管结果怎么样，都转战多邻国了</li>
+</ul>
