--- a/iphyer.github.io/搬家记录5: Year 2024.html
+++ b/iphyer.github.io/搬家记录5: Year 2024.html
@@ -70,8 +70,7 @@ comments: true</p>
 <li>Costco</li>
 <li>Set up new utility and autopay</li>
 <li>USPS Forward Request </li>
-<li><p>Closing utility Service</p>
-<ul>
+<li>Closing utility Service <ul>
 <li>internet：return Spectrum equipment </li>
 <li>water: Apartment takes care</li>
 <li>electricity: City of Austin Utilities: Stop service request</li>
@@ -79,6 +78,5 @@ comments: true</p>
 <li>etc.</li>
 </ul>
 </li>
-<li><p>Returning Keys</p>
-</li>
+<li>Returning Keys</li>
 </ol>
