--- a/kexizeroing.github.io/Explore interactive blog cells.html
+++ b/kexizeroing.github.io/Explore interactive blog cells.html
@@ -118,3 +118,50 @@ const babelTransformWithPlugin = (code) =&gt; {
 <h3>CodeSandbox and StackBlitz</h3>
 <p><strong>Sandpack</strong> is a component toolkit for creating live-running code editing experiences, powered by the online bundler used on CodeSandbox. <a href="https://sandpack.codesandbox.io">https://sandpack.codesandbox.io</a></p>
 <p><strong>WebContainers</strong> are a browser-based runtime for executing Node.js applications and operating system commands, entirely inside your browser tab. <a href="https://webcontainers.io">https://webcontainers.io</a></p>
+<pre><code class="lang-jsx">import { Sandpack } from "@codesandbox/sandpack-react";
+
+const SandpackExample = () =&gt; {
+  const files = {
+    "/App.js": `
+import React from 'react';
+
+export default function App() {
+  return (
+    &lt;div style={{ fontFamily: 'system-ui, sans-serif', lineHeight: '1.4' }}&gt;
+      &lt;h1&gt;Hello Sandpack!&lt;/h1&gt;
+      &lt;p&gt;Start editing to see some magic happen!&lt;/p&gt;
+    &lt;/div&gt;
+  );
+}
+`,
+    "/index.js": `
+import React from 'react';
+import ReactDOM from 'react-dom';
+import App from './App';
+
+ReactDOM.render(
+  &lt;React.StrictMode&gt;
+    &lt;App /&gt;
+  &lt;/React.StrictMode&gt;,
+  document.getElementById('root')
+);
+`,
+  };
+
+  return (
+    &lt;div style={{ padding: "20px" }}&gt;
+      &lt;h1&gt;Sandpack Example&lt;/h1&gt;
+      &lt;Sandpack
+        options={{
+          showNavigator: true,
+          editorHeight: 400,
+          showTabs: true,
+        }}
+        files={files}
+        theme="dark"
+        template="react"
+      /&gt;
+    &lt;/div&gt;
+  );
+};
+</code></pre>
