--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -130,6 +130,14 @@ function fetchVideo() {
   }
 }
 </code></pre>
+<pre><code class="lang-js">// `AbortSignal.any()`: will abort whichever is sooner
+const req = await fetch('/api/data', {
+  signal: AbortSignal.any([
+    AbortSignal.timeout(2000),
+    controller.signal
+  ])
+});
+</code></pre>
 <h3>Build on Fetch</h3>
 <ul>
 <li><a href="https://github.com/elbywan/wretch">wretch</a> is a tiny wrapper built around fetch.</li>
