--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 5</p>
-<h2>updatedDate: "Aug 5 2024"</h2>
+<h2>updatedDate: "Aug 21 2024"</h2>
 <p>更全面的准备可以参考:</p>
 <ul>
 <li><a href="https://hzfe.github.io/awesome-interview">https://hzfe.github.io/awesome-interview</a></li>
@@ -252,7 +252,7 @@ console.log(get(obj, ['a', 'b', 'c'])); // 42
 console.log(get(obj, 'a.b.d', 'default')); // 'default'
 console.log(get(obj, 'x.y.z', 'not found')); // 'not found'</p>
 <pre><code>
-9.  How to add two big integers in js?
+9. How to add two big integers in js?
 ```js
 function add(A, B) {
   const AL = A.length
@@ -276,4 +276,48 @@ function add(A, B) {
 
   return sum
 }
+</code></pre>
+<ol>
+<li>Implement a simple middleware composition system, which is a common pattern in server-side JavaScript environments. <code>app.use</code> is used to register middleware functions, and <code>app.compose</code> is meant to run them in sequence.</li>
+</ol>
+<pre><code class="lang-js">const app = { middlewares: [] };
+
+app.use = (fn) =&gt; {
+  app.middlewares.push(fn);
+};
+
+app.compose = function() {
+  // Your code goes here
+}
+
+app.use(next =&gt; {
+  console.log(1);
+  next();
+  console.log(2);
+});
+app.use(next =&gt; {
+  console.log(3);
+  next();
+  console.log(4);
+});
+app.use(next =&gt; {
+  console.log(5);
+  next();
+  console.log(6);
+});
+
+app.compose();  // Logs: 1, 3, 5, 6, 4, 2
+</code></pre>
+<pre><code class="lang-js">const compose = (middlewares) =&gt; {
+  return () =&gt; {
+    const dispatch = (i) =&gt; {
+      const fn = middlewares[i];
+      if (!fn) return;
+      fn(() =&gt; dispatch(i + 1));
+    };
+    dispatch(0);
+  };
+};
+
+app.compose = compose(app.middlewares);
 </code></pre>
