--- a/kexizeroing.github.io/SWR, SWC, and MSW.html
+++ b/kexizeroing.github.io/SWR, SWC, and MSW.html
@@ -153,6 +153,33 @@ npx swc ./file.js -o output.js
 <li><code>tsup</code> is the simplest way to bundle your TypeScript libraries with no config, powered by esbuild. It can bundle anything that's supported by Node.js natively, namely <code>.js</code>, <code>.json</code>, <code>.mjs</code>, and TypeScript <code>.ts</code>, <code>.tsx</code>.</li>
 </ol>
 </blockquote>
+<h3>JSX transformation with SWC</h3>
+<pre><code class="lang-js">// npm install @swc/core @swc/cli --save-dev
+
+const { transformFileSync } = require('@swc/core');
+const fs = require('fs');
+const path = require('path');
+
+const inputFilePath = path.join(__dirname, 'example.jsx');
+const outputFilePath = path.join(__dirname, 'example.js');
+
+const output = transformFileSync(inputFilePath, {
+  jsc: {
+    parser: {
+      syntax: 'ecmascript',
+      jsx: true
+    },
+    transform: {
+      react: {
+        runtime: 'classic', // use React.createElement
+      }
+    }
+  }
+});
+
+fs.writeFileSync(outputFilePath, output.code);
+console.log('Transformation complete. Output written to example.js');
+</code></pre>
 <h3>Oxc - The JavaScript Oxidation Compiler</h3>
 <p>Oxc is building a parser, linter, formatter, transpiler, minifier, resolver ... all written in Rust. This project shares the same philosophies as Biome. JavaScript tooling could be rewritten in a more performant language.</p>
 <p><a href="https://oxc-project.github.io/docs/guide/usage/linter.html">Oxlint</a> is a JavaScript linter designed to catch erroneous or useless code without requiring any configurations by default. It is generally available at December 12, 2023.</p>
