--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -31,6 +31,7 @@ npx shadcn-ui@latest init
 <li>@clerk/nextjs: add authentication and user management to your Next.js application.</li>
 <li>prisma and @prisma/client: an open-source ORM for Node.js and TypeScript. You can integrate Prisma with <a href="https://planetscale.com/docs/prisma/prisma-quickstart">PlanetScale</a>, a MySQL-compatible serverless database. The fastest way to get started with Prisma is by following the <a href="https://www.prisma.io/docs/getting-started/quickstart">Quickstart</a>.</li>
 <li><a href="https://neon.tech">Neon</a> is a serverless Postgres platform, <em>Neon is to PostgreSQL as PlanetScale is to MySQL</em>. Neon provides a generous free tier, making it a good fit for small applications and hobby projects. (PlanetScale has made the decision to stop offering the Hobby tier.)</li>
+<li><a href="https://upstash.com">Upstash</a> is a serverless data platform with Redis, Kafka and Vector Database APIs.</li>
 <li>zustand: one of many state management libraries for React. It's kinda like Redux, but much simpler.</li>
 <li>react-hot-toast: lightweight notifications for React.</li>
 <li>lucide-react: implementation of the lucide icon library for react applications.</li>
@@ -326,6 +327,9 @@ clsx(['foo'], ['', 0, false, 'bar'], [['baz', [['hello'], 'there']]]);
 </ol>
 <blockquote><p>AWS provides all the necessary building blocks for the modern web. With over 200 services, AWS caters to every aspect of web application infrastructure, including compute, storage, databases, machine learning, and more. Start watching Basic Elements of AWS: <a href="https://www.proaws.dev/tutorials/basic-elements-of-aws~hk2qv">https://www.proaws.dev/tutorials/basic-elements-of-aws~hk2qv</a></p>
 </blockquote>
+<h3>Fully hosted and self hosting solutions</h3>
+<p>In a fully hosted solution, the service provider takes care of hosting the software, managing servers, databases, scaling, and maintaining the infrastructure. Users don’t have to worry about setting up or managing the backend infrastructure. Examples: Google Workspace (formerly G Suite), Shopify, Slack.</p>
+<p>In a self-hosted solution, the user is responsible for installing, configuring, and maintaining the software on their own servers or infrastructure. Users have full control over the environment. Examples: WordPress, GitLab.</p>
 <h3>Netlify functions</h3>
 <p>The serverless functions can be run by <a href="https://cli.netlify.com/netlify-dev">Netlify Dev</a> in the same way they would be when deployed to the cloud. Once you've configured the functions directory in your <code>netlify.toml</code>, the functions will be accessible through netlify dev server. e.g. at <code>http://localhost:8888/.netlify/functions/{function-name}</code>.</p>
 <p>Go through the guide (mainly on traditional serverless functions): <a href="https://www.netlify.com/blog/intro-to-serverless-functions/">https://www.netlify.com/blog/intro-to-serverless-functions/</a></p>
