--- a/yuanj.top/README.html
+++ b/yuanj.top/README.html
@@ -10,6 +10,7 @@
 <li>💻 Arch and GNU Cultist, first thing in the morning is 'yay -Syyu' .</li>
 <li>📗 Blogger of the WeChat official account  <a href="https://yuanj.top/images/wechat.jpg">猫四叔</a> .</li>
 <li>🎮 Player for <a href="https://en.wikipedia.org/wiki/RSS">RSS</a> / <a href="https://zh.wikipedia.org/wiki/%E7%AF%AE%E7%90%83">Basketball</a> / <a href="https://www.isotope244.com/machines-at-war-3.html">Machines at War 3</a> / <a href="https://val.qq.com/main.html">VALORANT</a> / <a href="https://www.minecraft.net/zh-hans">Minecraft</a> .</li>
+<li>🕝 What I'm <a href="https://rss.yuanj.top/">reading</a>? What I'm <a href="https://yuanj.top/">writing</a>? What I'm <a href="https://scholar.google.com/citations?view_op=list_works&amp;hl=zh-CN&amp;hl=zh-CN&amp;user=VHD-XpkAAAAJ">researching</a>?</li>
 <li>📫 Welcome to <a href="https://yuanj.top/">yuanj.top</a> or Email me at: <a href="https://yuanj.top/images/email.png">yuanj.top@gmail.com</a> .</li>
 </ul>
 <h2>你可以在这里留言</h2>
