--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8856 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8867 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E6%80%8E%E6%A0%B7%E7%90%86%E8%A7%A3%E9%80%92%E5%BD%92.html>2024-08-23 怎样理解递归</a></li>
+
+<li><a href=yuanj.top/Arch%20%E4%B8%8B%E7%9A%84%E5%BA%94%E7%94%A8%E6%96%B9%E6%A1%88.html>2024-08-22 Arch 下的应用方案</a></li>
+
+<li><a href=jasonkayzk.github.io/%E5%BC%80%E6%BA%90%E7%9A%84%E4%B8%AA%E4%BA%BA%E4%B9%A6%E7%B1%8D%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9FTalebook.html>2024-08-22 开源的个人书籍管理系统Talebook</a></li>
+
+<li><a href=jasonkayzk.github.io/2024%E5%B9%B4%E5%AE%89%E8%A3%85Docker%E7%9A%84%E6%96%B9%E6%B3%95.html>2024-08-22 2024年安装Docker的方法</a></li>
+
+<li><a href=jasonkayzk.github.io/Python%E9%A1%B9%E7%9B%AELinter%E3%80%81Formatter%E5%92%8CGithub-Actions%E9%85%8D%E7%BD%AE.html>2024-08-21 Python项目Linter、Formatter和Github-Actions配置</a></li>
+
+<li><a href=jasonkayzk.github.io/Zerotier%E9%85%8D%E7%BD%AE%E5%86%85%E7%BD%91%E6%B5%81%E9%87%8F%E8%BD%AC%E5%8F%91.html>2024-08-21 Zerotier配置内网流量转发</a></li>
+
+<li><a href=jasonkayzk.github.io/%E5%85%B3%E4%BA%8E%E8%AF%B4%E8%AF%9D%E8%89%BA%E6%9C%AF%E7%9A%84%E8%B5%84%E6%BA%90.html>2024-08-21 关于说话艺术的资源</a></li>
+
+<li><a href=jasonkayzk.github.io/%E5%AE%89%E8%A3%85Nvidea%E9%A9%B1%E5%8A%A8%E5%8F%8ACUDA.html>2024-08-20 安装Nvidea驱动及CUDA</a></li>
+
+<li><a href=yuanj.top/2024%20%E5%81%87%E6%9C%9F%E6%80%BB%E7%BB%93%20%7C%20%E5%9D%9A%E6%8C%81%E5%88%B0%E5%BA%95%E5%B0%B1%E6%98%AF%E6%88%91%E7%9A%84%E8%83%9C%E5%88%A9.html>2024-08-19 2024 假期总结 | 坚持到底就是我的胜利</a></li>
+
+<li><a href=iphyer.github.io/%E4%B8%80%E6%AC%A1%E9%80%81%E8%B4%A7%E7%9A%84%E5%8F%8D%E6%80%9D.html>2024-08-17 一次送货的反思</a></li>
+
+<li><a href=mabbs.github.io/Mac%20mini%202018%E4%BD%BF%E7%94%A8%E4%BD%93%E9%AA%8C.html>2024-08-17 Mac mini 2018使用体验</a></li>
 
 <li><a href=jasonkayzk.github.io/%E4%B8%A4%E5%88%86%E9%92%9F%E9%80%90%E5%AD%97%E7%A8%BF.html>2024-08-13 两分钟逐字稿</a></li>
 
