--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -175,6 +175,7 @@ dog = {
 };
 
 // Union Type (a type can be one of multiple types, type A = X | Y)
+// Narrow down the types of values: typeof, truthiness, instanceof...
 const sayHappyBirthday = (name: string | null) =&gt; {
   if (name === null) {
     console.log('Happy birthday!');
