--- a/kexizeroing.github.io/JavaScript Observer APIs.html
+++ b/kexizeroing.github.io/JavaScript Observer APIs.html
@@ -6,7 +6,7 @@ slug: js-observer-apis
 description: ""
 added: "May 9 2024"
 tags: [js]</p>
-<h2>updatedDate: "July 31 2024"</h2>
+<h2>updatedDate: "Aug 17 2024"</h2>
 <p>Observers can be helpful to watch certain activities happening in the browser and respond accordingly. For example, we can observe, if child element has been added or removed from the parent DOM element, if a video is displayed within the viewport and enable autoplay, if the size/dimensions of a box element has changed and so on. These are different types of observer APIs in JavaScript.</p>
 <h2>Mutation Observer API</h2>
 <p>The <code>MutationObserver</code> interface provides the ability to watch for changes being made to the DOM tree.</p>
@@ -41,6 +41,35 @@ observer.observe(targetNode, config)
 
 // Later, you can stop observing
 observer.disconnect()
+</code></pre>
+<pre><code class="lang-js">// Message box: automatically scroll to the bottom of the container
+export default function AutomaticScroller({ children, className }) {
+  const ref = useRef(null);
+
+  useEffect(() =&gt; {
+    const mutationObserver = new MutationObserver(async () =&gt; {
+      if (ref.current) {
+        ref.current.scroll({ behavior: 'smooth', top: ref.current.scrollHeight });
+      }
+    });
+
+    if (ref.current) {
+      mutationObserver.observe(ref.current, {
+        childList: true,
+      });
+
+      return () =&gt; {
+        mutationObserver.disconnect();
+      };
+    }
+  }, [ref]);
+
+  return (
+    &lt;div ref={ref} className={className}&gt;
+      {children}
+    &lt;/div&gt;
+  );
+}
 </code></pre>
 <h2>Intersection Observer API</h2>
 <p>The <code>IntersectionObserver</code> interface provides a way to asynchronously observe changes in the intersection of a target element with an ancestor element or with a top-level document's viewport. The ancestor element or viewport is referred to as the root.</p>
