--- a/kexizeroing.github.io/Practical considerations for Input fields.html
+++ b/kexizeroing.github.io/Practical considerations for Input fields.html
@@ -5,7 +5,7 @@ title: "Practical considerations for Input fields"
 slug: practical-considerations-for-input-fields
 description: ""
 added: "Jun 5 2024"
-updatedDate: "Aug 12 2024"</p>
+updatedDate: "Aug 17 2024"</p>
 <h2>tags: [web]</h2>
 <h2>Dealing with contenteditable elements in Vue</h2>
 <pre><code class="lang-vue">&lt;template&gt;
@@ -162,57 +162,148 @@ function TabButton({ children, isActive, onClick }) {
   )
 }
 </code></pre>
-<h2>Next.js Input search</h2>
-<p>The search input has a 200ms debounce. After 200ms of inactivity, the form submits, updating the URL state with <code>?q={search}</code>. The Server Component reads <code>searchParams</code> and queries the database. On form submission, a React transition starts, allowing us to read the pending status with <code>useFormStatus</code> to display an inline loading state.</p>
-<pre><code class="lang-js">'use client';
+<h2>React 19 <code>useActionState</code> and <code>useFormStatus</code></h2>
+<p>React 19 has a built-in mechanism for handling forms called "actions". Below example from <a href="https://www.youtube.com/watch?v=ExZUdkfu-KE">Shruti Kapoor's video</a> shows how to convert a form from React 18 to React 19.</p>
+<ul>
+<li>There’s no need to add <code>event.preventDefault</code> because that’s handled for us by React.</li>
+<li>The <code>action</code> is automatically treated as a transition.</li>
+<li>We can hook into the pending state of this action using <code>useFormStatus</code>.</li>
+<li>React manages errors and race conditions to ensure our form’s state is always correct.</li>
+</ul>
+<pre><code class="lang-js">// React 18
+function App() {
+  const [name, setName] = useState("");
+  const [isPending, setIsPending] = useState("");
 
-import Form from 'next/form';
-import { useFormStatus } from 'react-dom';
-import { useDebouncedCallback } from 'use-debounce';
-import { useEffect, useRef } from 'react';
-import { Input } from '@/components/ui/input';
+  const handleChange = (event) =&gt; {
+    setName(event.target.value);
+  };
 
-export function Search({ query }: { query: string }) {
-  let formRef = useRef&lt;HTMLFormElement | null&gt;(null);
-
-  let handleInputChange = useDebouncedCallback((e) =&gt; {
-    e.preventDefault();
-    formRef.current?.requestSubmit();
-  }, 200);
-
-  useEffect(() =&gt; {
-    formRef.current?.querySelector('input')?.focus();
-  }, []);
+  const handleSubmit = (event) =&gt; {
+    event.preventDefault();
+    setIsPending(true);
+    setTimeout(() =&gt; {
+      // call API
+      setIsPending(false);
+    }, [1000]);
+  };
 
   return (
-    &lt;Form
-      ref={formRef}
-      action="/"
-    &gt;
-      &lt;label htmlFor="search"&gt;
-        Search
-      &lt;/label&gt;
-      &lt;Input
-        onChange={handleInputChange}
-        type="text"
-        name="q"
-        id="search"
-        placeholder="Search..."
-        defaultValue={query}
-      /&gt;
-      &lt;LoadingIcon /&gt;
-    &lt;/Form&gt;
+    &lt;form&gt;
+      &lt;input type="text" name="name" onChange={handleChange} /&gt;
+      { isPending ? &lt;p&gt;{"Loading"}&lt;/p&gt; : &lt;p&gt; Hello in React 18 {name}&lt;/p&gt; }
+      &lt;button onClick={handleSubmit} disabled={isPending}&gt;
+        Update
+      &lt;/button&gt;
+    &lt;/form&gt;
+  );
+}
+</code></pre>
+<pre><code class="lang-js">// React 19
+function RenderName({ name }) {
+  // https://react.dev/reference/react-dom/hooks/useFormStatus
+  // The `useFormStatus` hook only returns status information for a parent &lt;form&gt;
+  const { pending } = useFormStatus();
+  return &lt;div&gt;{pending ? "Loading" : `Hello in React 19 ${name}` }&lt;/div&gt;;
+}
+
+function SubmitButton() {
+  const { pending } = useFormStatus();
+  return (
+    &lt;button type="submit" disabled={pending}&gt;
+      Update
+    &lt;/button&gt;
   );
 }
 
-function LoadingIcon() {
-  let { pending } = useFormStatus();
+function App() {
+  // https://react.dev/reference/react/useActionState
+  // You pass `useActionState` an existing form action function as well as an initial state,
+  // and it returns a new action that you use in your form, along with the latest form state.
+  // The latest form state is also passed to the function that you provided.
+  const [state, formAction] = useActionState(submitFormAction, { name: "" });
 
-  return pending ? (
-    &lt;div&gt;
-      &lt;span&gt;Loading...&lt;/span&gt;
-    &lt;/div&gt;
-  ) : null;
+  return (
+    &lt;form action={formAction}&gt;
+      &lt;input type="text" name="inputName" /&gt;
+      &lt;RenderName name={state?.name} /&gt;
+      &lt;SubmitButton /&gt; 
+    &lt;/form&gt;
+  );
+}
+
+// actions.js
+'use server';
+
+export const submitFormAction = async (previousState, formData) =&gt; {
+  const name = formData.get("name");
+  await new Promise((res) =&gt; setTimeout(res, 1000));
+  return { ...previousState, name: name };
+};
+</code></pre>
+<p>There is another example from React Conf 2024 displaying a message box, which is progressively enhanced with React 19 features. <strong>The main functionality of the form works without JavaScript</strong>.</p>
+<pre><code class="lang-js">// https://www.youtube.com/watch?v=X9cw4VczYVg
+export default function MessageInput({ userId }) {
+  const [state, submitMessageAction] = useActionState(submitMessage, {
+    success: false,
+  });
+
+  useEffect(() =&gt; {
+    if (state.error) {
+      toast.error(state.error);
+    }
+  }, [state.error, state.timestamp]);
+
+  return (
+    &lt;&gt;
+      &lt;form action={submitMessageAction} className="flex flex-col gap-2 p-6"&gt;
+        &lt;input
+          autoComplete="off"
+          required
+          minLength={1}
+          name="content"
+          className="italic outline-none"
+          placeholder="Type a message..."
+        /&gt;
+        &lt;input type="hidden" name="userId" value={userId} /&gt;
+        {/* get pending status using `useFormStatus()` inside the button component */}
+        &lt;SubmitButton&gt;Send&lt;/SubmitButton&gt;
+      &lt;/form&gt;
+    &lt;/&gt;
+  );
+}
+
+export async function submitMessage(_prevState, formData) {
+  // z.object({
+  //   content: z.string().min(1, {
+  //     message: 'Content must be at least 1 characters long',
+  //   }),
+  //   createdById: z.string().uuid({
+  //     message: 'Invalid user ID',
+  //   }),
+  // });
+  const result = messageSchema.safeParse({
+    content: formData.get('content'),
+    createdById: formData.get('userId'),
+  });
+
+  if (!result.success) {
+    return {
+      error: 'Invalid message!',
+      success: false,
+      timestamp: new Date(),
+    };
+  }
+
+  await prisma.message.create({
+    data: result.data,
+  });
+
+  revalidatePath('/');
+
+  return {
+    success: true,
+  };
 }
 </code></pre>
 <h2>Styling validation status</h2>
