--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -9,6 +9,13 @@ tags: [js]</p>
 <h2>updatedDate: "Aug 4 2024"</h2>
 <h2>ES Modules</h2>
 <p>While Node.js has been using the CommonJS standard for years and there are a number of JavaScript libraries and frameworks that enable module usage, the browser never had a module system. A module system must be first standardized by ECMAScript and then implemented by the browser. The good news is that modern browsers have started to support module functionality natively, and the use of native JavaScript modules is dependent on the <em>import</em> and <em>export</em> statements. <strong>The import and export statements cannot be used in embedded scripts unless such script has a <code>type="module"</code></strong>.</p>
+<blockquote><p>History of module formats:</p>
+<ol>
+<li><strong>AMD (Asynchronous Module Definition):</strong> This is primarily considered a browser-specific module format. Its key feature is asynchronous module loading, with modules wrapped in a <code>define()</code> call. It requires a dedicated loader to run, with RequireJS being the most commonly used one back in the day.</li>
+<li><strong>CJS (CommonJS):</strong> This is the most common module format in the Node.js environment and was originally the only natively supported format in Node.js. It uses <code>module</code> and <code>exports</code>.</li>
+<li><strong>UMD (Universal Module Definition):</strong> Since AMD and CJS are incompatible with each other, but developers wanted a single codebase to work in both browser and Node.js, UMD was created. UMD wraps the module in an IIFE and includes logic to check for <code>define</code>, <code>module</code>, and other variables for compatibility.</li>
+</ol>
+</blockquote>
 <h3>Exporting module features</h3>
 <p>The first thing you need to do to get access to module features is export them. This is done using the <code>export</code> statement. The easiest way to use it is to place it in front of any items you want exported out of the module. A more convenient way of exporting all the items is to use a single <code>export</code> statement at the end of your module file, followed by a comma-separated list of the features you want to export wrapped in curly braces. You can <strong>export functions, var, let, const, and classes</strong>. They need to be top-level items; you can't use export inside a function.</p>
 <pre><code class="lang-javascript">export const name = 'square';
